--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-flask",
   "private": true,
+  "proxy": "http://127.0.0.1:5555",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,7 +12,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
+    "switch": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
