--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,18 +4,21 @@ aniso8601==9.0.1
 blinker==1.6.2 ; python_version >= '3.7'
 click==8.1.3 ; python_version >= '3.7'
 flask==2.3.2
+flask-cors==3.0.10
 flask-migrate==4.0.4
-flask-restful==0.3.10
+flask-restful==0.3.8
 flask-sqlalchemy==3.0.3
 greenlet==2.0.2 ; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 gunicorn==20.1.0
-importlib-metadata==6.6.0 ; python_version < '3.10'
+honcho==1.1.0
+importlib-metadata==6.6.0
 importlib-resources==5.12.0 ; python_version < '3.9'
 itsdangerous==2.1.2 ; python_version >= '3.7'
 jinja2==3.1.2 ; python_version >= '3.7'
 mako==1.2.4 ; python_version >= '3.7'
 markupsafe==2.1.3 ; python_version >= '3.7'
 psycopg2-binary==2.9.6
+python-dotenv==1.0.0
 pytz==2023.3
 setuptools==67.8.0 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
